--- a/Writing/Interim_Report/My_Library.bib
+++ b/Writing/Interim_Report/My_Library.bib
@@ -104,41 +104,6 @@ This first paper focusses on the systematic modelling and experimental verificat
 	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/A3ASNMGG/Lucu et al. - 2020 - Data-driven nonparametric Li-ion battery ageing model aiming at learning from real operation data –.pdf:application/pdf},
 }
 
-@article{tran_comprehensive_2021-1,
-	title = {A comprehensive equivalent circuit model for lithium-ion batteries, incorporating the effects of state of health, state of charge, and temperature on model parameters},
-	volume = {43},
-	issn = {2352-152X},
-	url = {https://www.sciencedirect.com/science/article/pii/S2352152X2100949X},
-	doi = {10.1016/j.est.2021.103252},
-	abstract = {The equivalent circuit model (ECM) is a battery model often used in the battery management system (BMS) to monitor and control lithium-ion batteries (LIBs). The accuracy and complexity of the ECM, hence, are very important. State of charge (SOC) and temperature are known to affect the parameters of the ECM and have been integrated into the model effectively. However, the effect of the state of health (SOH) on these parameters has not been widely investigated. Without a good understanding of the effect of SOH on ECM parameters, parameter identification would have to be done manually through calibration, which is inefficient. In this work, experiments were performed to investigate the effect of SOH on Thevenin ECM parameters, in addition to the effect of SOC and temperature. The results indicated that with decreasing SOH, the ohmic resistance and the polarization resistance increase while the polarization capacitance decreases. An empirical model was also proposed to represent the effect of SOH, SOC, and temperature on the ECM parameters. The model was then validated experimentally, yielding good results, and found to improve the accuracy of the Thevenin model significantly. With low complexity and high accuracy, this model can be easily integrated into real-world BMS applications.},
-	urldate = {2025-10-30},
-	journal = {Journal of Energy Storage},
-	author = {Tran, Manh-Kien and Mathew, Manoj and Janhunen, Stefan and Panchal, Satyam and Raahemifar, Kaamran and Fraser, Roydon and Fowler, Michael},
-	month = nov,
-	year = {2021},
-	keywords = {Battery management system, Battery modeling, Equivalent circuit model, Lithium-ion batteries, State of charge, State of health},
-	pages = {103252},
-	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/TV2Q3K4M/S2352152X2100949X.html:text/html},
-}
-
-@article{mattia_lithium-ion_2025,
-	title = {Lithium-ion battery thermal modelling and characterisation: {A} comprehensive review},
-	volume = {129},
-	issn = {2352-152X},
-	shorttitle = {Lithium-ion battery thermal modelling and characterisation},
-	url = {https://www.sciencedirect.com/science/article/pii/S2352152X25018274},
-	doi = {10.1016/j.est.2025.117114},
-	abstract = {The widespread use of lithium-ion batteries and the demand for high performance battery packs have made battery thermal modelling a crucial research area. This field helps to understand and manage the heat generated and the temperature distribution during battery operation. Effective thermal management is essential to ensure safety, extend battery lifespan and optimise efficiency. In this work, heat generation is identified as the primary driver of temperature change and distribution within the cell. Various battery models are reviewed and classified, driving the selection of the right model according to the application. Several thermal characterisation methods are described in detail, with a focus on experimental techniques that can be applied in-situ. Finally, the challenges posed by temperature distribution are discussed extensively, with a focus on how these challenges could shape the future research and design of the next generation of lithium-ion cells and battery packs.},
-	urldate = {2025-10-31},
-	journal = {Journal of Energy Storage},
-	author = {Mattia, Luigi and Beiranvand, Hamzeh and Zamboni, Walter and Liserre, Marco},
-	month = sep,
-	year = {2025},
-	keywords = {Battery thermal models, Entropic heat coefficient, Heat generation, Spectroscopy, Thermal characterisation},
-	pages = {117114},
-	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/GIBWPZV9/Mattia et al. - 2025 - Lithium-ion battery thermal modelling and characterisation A comprehensive review.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/YN575VIA/S2352152X25018274.html:text/html},
-}
-
 @article{guo_effects_2024,
 	title = {Effects of charging rates on heat and gas generation in lithium-ion battery thermal runaway triggered by high temperature coupled with overcharge},
 	volume = {600},
@@ -409,7 +374,7 @@ This first paper focusses on the systematic modelling and experimental verificat
 	author = {Schmitt, Julius and Rehm, Mathias and Karger, Alexander and Jossen, Andreas},
 	month = mar,
 	year = {2023},
-	keywords = {Lithium-ion battery, Capacity estimation, Degradation modes, OCV curve, Partial charging, State of health estimation},
+	keywords = {Capacity estimation, Degradation modes, Lithium-ion battery, OCV curve, Partial charging, State of health estimation},
 	pages = {106517},
 	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/RLW8R9CR/Schmitt et al. - 2023 - Capacity and degradation mode estimation for lithium-ion batteries based on partial charging curves.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/LMIVKNSR/S2352152X22025063.html:text/html},
 }
@@ -448,7 +413,7 @@ This first paper focusses on the systematic modelling and experimental verificat
 	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/RSUMKL7Q/Wang et al. - 2016 - A critical review of thermal management models and solutions of lithium-ion batteries for the develo.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/4AZE8G3F/S1364032116301435.html:text/html},
 }
 
-@article{mattia_lithium-ion_2025-1,
+@article{mattia_lithium-ion_2025,
 	title = {Lithium-ion battery thermal modelling and characterisation: {A} comprehensive review},
 	volume = {129},
 	issn = {2352-152X},
@@ -561,31 +526,6 @@ This first paper focusses on the systematic modelling and experimental verificat
 	keywords = {Co, Li, lifecycle, recycling},
 	pages = {E14},
 	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/8LC8CJQP/Gaines et al. - 2018 - Key issues for Li-ion battery recycling.pdf:application/pdf},
-}
-
-@article{gifford_lithium_nodate,
-	title = {Lithium, {Cobalt} and {Nickel}: {The} {Gold} {Rush} of the 21st {Century}},
-	language = {en},
-	number = {6},
-	author = {Gifford, Stephen},
-	file = {PDF:/Users/georgekirby/Zotero/storage/Z72GC279/Gifford - Lithium, Cobalt and Nickel The Gold Rush of the 21st Century.pdf:application/pdf},
-}
-
-@article{schmitt_capacity_2023-1,
-	title = {Capacity and degradation mode estimation for lithium-ion batteries based on partial charging curves at different current rates},
-	volume = {59},
-	issn = {2352-152X},
-	url = {https://www.sciencedirect.com/science/article/pii/S2352152X22025063},
-	doi = {10.1016/j.est.2022.106517},
-	abstract = {The open circuit voltage (OCV) curve of a lithium-ion cell can be described as the difference between the half-cell open circuit potential curves of both electrodes. Fitting a reconstructed OCV curve to the OCV curve of an aged cell allows identification of degradation modes. In this study, we show that this method can also be applied to partial charging curves of a commercial cell with silicon–graphite and NMC-811 as electrode materials. Both the degradation modes and the remaining cell capacity can be determined from the reconstructed OCV curve. For the investigated cell, accurate OCV reconstruction and degradation mode estimation can be obtained from C/30 partial charging curves if the state of charge (SOC) window between 20\% and 70\% is available. We show that the method is also applicable to charging curves at higher current rates if the additional overpotential is considered by subtracting a constant voltage offset. Capacity estimation with an accuracy of 2\% of the nominal capacity is possible for current rates up to approximately C/4 if partial charging curves between 10\% and 80\% SOC are used, while a maximum current rate of C/15 should be used for accurate estimation of the degradation modes.},
-	urldate = {2025-11-13},
-	journal = {Journal of Energy Storage},
-	author = {Schmitt, Julius and Rehm, Mathias and Karger, Alexander and Jossen, Andreas},
-	month = mar,
-	year = {2023},
-	keywords = {Lithium-ion battery, Capacity estimation, Degradation modes, OCV curve, Partial charging, State of health estimation},
-	pages = {106517},
-	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/M95IU279/Schmitt et al. - 2023 - Capacity and degradation mode estimation for lithium-ion batteries based on partial charging curves.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/7KVNLNYX/S2352152X22025063.html:text/html},
 }
 
 @article{sheng_experimental_2019,
@@ -716,41 +656,6 @@ This first paper focusses on the systematic modelling and experimental verificat
 	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/6BHKDAHY/Chen et al. - 2021 - Overpotential analysis of graphite-based Li-ion batteries seen from a porous electrode modeling pers.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/N5Z7MVZS/S0378775321008570.html:text/html},
 }
 
-@article{chen_overpotential_2021-1,
-	title = {Overpotential analysis of graphite-based {Li}-ion batteries seen from a porous electrode modeling perspective},
-	volume = {509},
-	issn = {0378-7753},
-	url = {https://www.sciencedirect.com/science/article/pii/S0378775321008570},
-	doi = {10.1016/j.jpowsour.2021.230345},
-	abstract = {The overpotential of Li-ion batteries is one of the most relevant characteristics influencing the power and energy densities of these battery systems. However, the intrinsic complexity and multi-influencing factors make it challenging to analyze the overpotential precisely. To decompose the total overpotential of a battery into various individual components, a pseudo-two-dimensional (P2D) model has been adopted and used for electrochemical simulations of a graphite-based porous electrode/Li battery. Analytical expressions for the total overpotential have been mathematically derived and split up into four terms, associated with the electrolyte concentration overpotential, the Li concentration overpotential in the solid, the kinetic overpotential, and the ohmic overpotential. All these four terms have been separately analyzed and are found to be strongly dependent on the physical/chemical battery parameters and the reaction-rate distribution inside the porous electrode. The reaction-rate distribution of the porous electrode is generally non-uniform and shows dynamic changes during (dis)charging, resulting in fluctuations in the four overpotential components. In addition, the disappearance of the phase-change information in the voltage curve of the graphite-based porous electrode/Li battery under moderate and high C-rates is ascribed to the Li concentration overpotential among solid particles, resulting from the non-uniform reaction-rate distribution.},
-	urldate = {2025-11-18},
-	journal = {Journal of Power Sources},
-	author = {Chen, Zhiqiang and Danilov, Dmitri L. and Raijmakers, Luc H. J. and Chayambuka, Kudakwashe and Jiang, Ming and Zhou, Lei and Zhou, Jiang and Eichel, Rüdiger-A. and Notten, Peter H. L.},
-	month = oct,
-	year = {2021},
-	keywords = {Li-ion batteries, Overpotential, P2D model, Porous electrodes, Reaction-rate distribution},
-	pages = {230345},
-	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/FN5GB6MG/Chen et al. - 2021 - Overpotential analysis of graphite-based Li-ion batteries seen from a porous electrode modeling pers.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/PIXPZYUW/S0378775321008570.html:text/html},
-}
-
-@article{appiah_unravelling_2024,
-	title = {Unravelling degradation mechanisms and overpotential sources in aged and non-aged batteries: {A} non-invasive diagnosis},
-	volume = {84},
-	issn = {2352-152X},
-	shorttitle = {Unravelling degradation mechanisms and overpotential sources in aged and non-aged batteries},
-	url = {https://www.sciencedirect.com/science/article/pii/S2352152X2400584X},
-	doi = {10.1016/j.est.2024.111000},
-	abstract = {In-depth analysis of overpotentials in complex electrochemical systems such as lithium-ion batteries is necessary for enhancing their energy and power density. However, dynamic operating conditions and complicated ageing mechanisms create challenges in determining the major sources of these overpotentials. We estimate the overpotentials of cells in a dataset consisting of aged and non-aged commercial lithium iron phosphate/graphite cells cycled under fast charging conditions. Using the pseudo-two-dimensional (P2D) model and the discharge profiles of the first 630 cycles, we conducted an in-situ monitoring of the sources of the overpotentials of cells that exhibited the longest, median, and shortest end of life. A derived analytical expression is used to decompose the total overpotential into lithium concentration overpotential, electrolyte concentration overpotential, ohmic overpotential and kinetic overpotential. The major source of overpotential is from the loss of lithium inventory and loss of active materials during cycling. This work highlights the importance of combining big data approach and physics-based models to learn from the overpotentials of complex electrochemical systems.},
-	urldate = {2025-11-18},
-	journal = {Journal of Energy Storage},
-	author = {Appiah, Williams Agyei and Rieger, Laura Hannemose and Flores, Eibar and Vegge, Tejs and Bhowmik, Arghya},
-	month = apr,
-	year = {2024},
-	keywords = {Lithium-ion batteries, Degradation mechanisms, In-situ diagnosis, Overpotentials, Pseudo-two-dimensional model},
-	pages = {111000},
-	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/MKP7YFAA/Appiah et al. - 2024 - Unravelling degradation mechanisms and overpotential sources in aged and non-aged batteries A non-i.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/AGISCE6T/S2352152X2400584X.html:text/html},
-}
-
 @article{li_review_2014,
 	title = {A review of lithium deposition in lithium-ion and lithium metal secondary batteries},
 	volume = {254},
@@ -821,23 +726,6 @@ This first paper focusses on the systematic modelling and experimental verificat
 	note = {Publisher: IOP Publishing},
 	pages = {A3189},
 	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/3BNDVL49/Reniers et al. - 2019 - Review and Performance Comparison of Mechanical-Chemical Degradation Models for Lithium-Ion Batterie.pdf:application/pdf},
-}
-
-@article{li_review_2014-1,
-	title = {A review of lithium deposition in lithium-ion and lithium metal secondary batteries},
-	volume = {254},
-	issn = {0378-7753},
-	url = {https://www.sciencedirect.com/science/article/pii/S0378775313020880},
-	doi = {10.1016/j.jpowsour.2013.12.099},
-	abstract = {Major aspects related to lithium deposition in lithium-ion and lithium metal secondary batteries are reviewed. For lithium-ion batteries with carbonaceous anode, lithium deposition may occur under harsh charging conditions such as overcharging or charging at low temperatures. The major technical solutions include: (1) applying electrochemical models to predict the critical conditions for deposition initiation; (2) preventions by improved battery design and material modification; (3) applying adequate charging protocols to inhibit lithium deposition. For lithium metal secondary batteries, the lithium deposition is the inherent reaction during charging. The major technical solutions include: (1) the use of mechanistic models to elucidate and control dendrite initiation and growth; (2) engineering surface morphology of the lithium deposition to avoid dendrite formation via adjusting the composition and concentration of the electrolyte; (3) controlling battery working conditions. From a survey of the literature, the areas that require further study are proposed; e.g., refining the lithium deposition criteria, developing an effective AC self pre-heating method for low-temperature charging of lithium-ion batteries, and clarifying the role the solid electrolyte interphase (SEI) plays in determining the deposition morphology; to facilitate a refined control of the lithium deposition.},
-	urldate = {2025-11-23},
-	journal = {Journal of Power Sources},
-	author = {Li, Zhe and Huang, Jun and Yann Liaw, Bor and Metzler, Viktor and Zhang, Jianbo},
-	month = may,
-	year = {2014},
-	keywords = {Dendrite, Electrodeposition, Electrolyte additives, Li metal secondary batteries, Lithium deposition, Low temperature charging},
-	pages = {168--182},
-	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/GWCMBZ79/Li et al. - 2014 - A review of lithium deposition in lithium-ion and lithium metal secondary batteries.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/3VSUT8VI/S0378775313020880.html:text/html},
 }
 
 @article{yang_minimum_2021,
@@ -1055,24 +943,7 @@ This first paper focusses on the systematic modelling and experimental verificat
 	author = {Guo, Wendi and Sun, Zhongchao and Vilsen, Søren Byg and Meng, Jinhao and Stroe, Daniel Ioan},
 	month = dec,
 	year = {2022},
-	keywords = {Lithium-ion batteries, Data-driven assisted physical models, Data-driven methods, Lifetime modeling, Physics-based models, Physics-guided data-driven},
-	pages = {105992},
-}
-
-@article{guo_review_2022-1,
-	title = {Review of “grey box” lifetime modeling for lithium-ion battery: {Combining} physics and data-driven methods},
-	volume = {56},
-	issn = {2352-152X},
-	shorttitle = {Review of “grey box” lifetime modeling for lithium-ion battery},
-	url = {https://www.sciencedirect.com/science/article/pii/S2352152X22019806},
-	doi = {10.1016/j.est.2022.105992},
-	abstract = {Lithium-ion batteries are a popular choice for a wide range of energy storage system applications. The current motivation to improve the robustness of lithium-ion battery applications has stimulated the need for in-depth research into aging effects and the establishment of lifetime prediction models. This paper reviews different combination approaches of physics-based models and data-driven models. The three basic physics-based battery lifetime models are introduced, and requirements and features are compared from an application perspective. Then, state-of-the-art approaches for integrating physics and data-driven methods are systematically reviewed. Flowcharts present each approach to offer the readers a clear understanding. Next, the publication trends are represented by line graphs, and pie charts, including data-driven assisted physical models and physics-guided data-driven, different physical model applications, and data-driven approaches. It is concluded that electrochemical models have great potential to describe complex aging behavior under various conditions. Moreover, machine learning is a promising tool to overcome mechanistic absence and highly nonlinear performance, occupying 78 \% of all data-driven methods. Physics-guided data-driven approach started to emerge as an innovative lifetime prediction method after 2020. The application advantages and limitations are compared according to the description of different methods. Furthermore, future perspectives are discussed, with opportunities and challenges. The Prospect of applying physics-guided machine learning looks forward to more inspiration.},
-	urldate = {2025-11-25},
-	journal = {Journal of Energy Storage},
-	author = {Guo, Wendi and Sun, Zhongchao and Vilsen, Søren Byg and Meng, Jinhao and Stroe, Daniel Ioan},
-	month = dec,
-	year = {2022},
-	keywords = {Lithium-ion batteries, Data-driven assisted physical models, Data-driven methods, Lifetime modeling, Physics-based models, Physics-guided data-driven},
+	keywords = {Data-driven assisted physical models, Data-driven methods, Lifetime modeling, Lithium-ion batteries, Physics-based models, Physics-guided data-driven},
 	pages = {105992},
 	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/MTKMXS3Z/Guo et al. - 2022 - Review of “grey box” lifetime modeling for lithium-ion battery Combining physics and data-driven me.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/UY56BMWM/S2352152X22019806.html:text/html},
 }
@@ -1112,15 +983,6 @@ This first paper focusses on the systematic modelling and experimental verificat
 	keywords = {State of health, Lithium-ion battery, Constant current charge time, Constant voltage charge time},
 	pages = {101342},
 	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/MI4F4KYY/S2352152X20300517.html:text/html},
-}
-
-@misc{noauthor_bayesian_nodate,
-	title = {Bayesian {Optimization} {Algorithm} - {MATLAB} \& {Simulink}},
-	url = {https://uk.mathworks.com/help/stats/bayesian-optimization-algorithm.html},
-	abstract = {Understand the underlying algorithms for Bayesian optimization.},
-	language = {en},
-	urldate = {2025-11-29},
-	file = {Snapshot:/Users/georgekirby/Zotero/storage/2UCY7FZB/bayesian-optimization-algorithm.html:text/html},
 }
 
 @article{liaw_modeling_nodate,
@@ -1237,12 +1099,12 @@ This first paper focusses on the systematic modelling and experimental verificat
 	author = {Mohamed, Mohamed A. A. and Yu, Tung Fai and Ramsden, Grace and Marco, James and Grandjean, Thomas},
 	month = mar,
 	year = {2025},
-	keywords = {Equivalent circuit model, First-order RC, Lithium-ion battery, Parameter estimation, Second-order RC},
+	keywords = {Equivalent circuit model, Lithium-ion battery, First-order RC, Parameter estimation, Second-order RC},
 	pages = {115581},
 	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/ZLXJNZFB/S2352152X25002944.html:text/html},
 }
 
-@article{gifford_lithium_nodate-1,
+@article{gifford_lithium_nodate,
 	title = {Lithium, {Cobalt} and {Nickel}: {The} {Gold} {Rush} of the 21st {Century}},
 	language = {en},
 	number = {6},
@@ -1278,7 +1140,7 @@ This first paper focusses on the systematic modelling and experimental verificat
 	file = {Snapshot:/Users/georgekirby/Zotero/storage/QWEIVTKN/battery-metals-report-2023-03.html:text/html},
 }
 
-@article{appiah_unravelling_2024-1,
+@article{appiah_unravelling_2024,
 	title = {Unravelling degradation mechanisms and overpotential sources in aged and non-aged batteries: {A} non-invasive diagnosis},
 	volume = {84},
 	issn = {2352-152X},
@@ -1291,7 +1153,7 @@ This first paper focusses on the systematic modelling and experimental verificat
 	author = {Appiah, Williams Agyei and Rieger, Laura Hannemose and Flores, Eibar and Vegge, Tejs and Bhowmik, Arghya},
 	month = apr,
 	year = {2024},
-	keywords = {Degradation mechanisms, In-situ diagnosis, Lithium-ion batteries, Overpotentials, Pseudo-two-dimensional model},
+	keywords = {Lithium-ion batteries, Degradation mechanisms, In-situ diagnosis, Overpotentials, Pseudo-two-dimensional model},
 	pages = {111000},
 	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/9DZ6WATB/S2352152X2400584X.html:text/html},
 }
@@ -1310,7 +1172,7 @@ This first paper focusses on the systematic modelling and experimental verificat
 	file = {Battery Management Systems, Volume 1\: Battery Modeling:/Users/georgekirby/Zotero/storage/J53XGQKL/BMS1.html:text/html},
 }
 
-@misc{noauthor_bayesian_nodate-1,
+@misc{noauthor_bayesian_nodate,
 	title = {Bayesian {Optimization} {Algorithm} - {MATLAB} \& {Simulink}},
 	url = {https://uk.mathworks.com/help/stats/bayesian-optimization-algorithm.html},
 	abstract = {Understand the underlying algorithms for Bayesian optimization.},
@@ -1331,7 +1193,7 @@ This first paper focusses on the systematic modelling and experimental verificat
 	author = {Xu, Jinxin and Xiong, Kai and Tang, Taoran and Chen, Yuanjie and Hu, Dongfang and Hou, Dexin and Yu, Mingming and Ding, Jiong},
 	month = jan,
 	year = {2025},
-	keywords = {Entropic coefficient, Frequency-domain method, Lithium-ion battery, Reversible heat, Thermal management},
+	keywords = {Lithium-ion battery, Entropic coefficient, Frequency-domain method, Reversible heat, Thermal management},
 	pages = {115578},
 	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/ZPXXHZFT/S0263224124014635.html:text/html},
 }
@@ -1353,4 +1215,86 @@ This first paper focusses on the systematic modelling and experimental verificat
 	year = {2023},
 	note = {Publisher: The Electrochemical Society},
 	file = {Full Text PDF:/Users/georgekirby/Zotero/storage/HWQ77CIC/Tucker et al. - 2023 - Optimal fast charging of lithium ion batteries between model-based and data-driven methods.pdf:application/pdf;Snapshot:/Users/georgekirby/Zotero/storage/ZHUH82RA/209066.html:text/html},
+}
+
+@misc{noauthor_renewable_nodate,
+	title = {Renewable electricity – {Renewables} 2025 – {Analysis}},
+	url = {https://www.iea.org/reports/renewables-2025/renewable-electricity},
+	abstract = {Renewables 2025 - Analysis and key findings. A report by the International Energy Agency.},
+	language = {en-GB},
+	urldate = {2025-12-03},
+	journal = {IEA},
+	file = {Snapshot:/Users/georgekirby/Zotero/storage/W5EVRLNN/renewable-electricity.html:text/html},
+}
+
+@article{das_lithium-ion_2026,
+	title = {Lithium-ion battery recycling: a critical review of techno-economical and socio-environmental impacts},
+	volume = {382},
+	issn = {1383-5866},
+	shorttitle = {Lithium-ion battery recycling},
+	url = {https://www.sciencedirect.com/science/article/pii/S1383586625044442},
+	doi = {10.1016/j.seppur.2025.135847},
+	abstract = {The increasing use of lithium-ion batteries (LIBs) in electric vehicles and electronic devices has created a pressing need for sustainable recycling solutions. This study presents a comprehensive analysis of LIB recycling, integrating technological, environmental, economic, and social dimensions. Recycling processes such as hydrometallurgy, pyrometallurgy, and direct recovery are explored for the extraction and reuse of essential battery components, including cathodes, anodes, electrolytes, binders, separators, and current collectors. Life cycle comparisons between recycled and virgin materials, as well as disposal methods like landfilling, are conducted, focusing on greenhouse gas emissions, energy demand, water use, and system costs. Direct recycling emerges as the most environmentally and economically favorable method, demonstrating the lowest emissions (0.6–8.1 kg CO₂/kg), energy consumption (3.5–112.1 MJ/kg), and cost (\$0.9–4.1/kg), with minimal water pollution. In contrast, virgin LIB manufacturing and landfilling exhibit significantly higher environmental and economic impacts compared to recycling. Economic analysis further reveals that fiscal incentives, even at modest levels, can markedly enhance the profitability and competitiveness of all recycling routes, particularly direct recycling. The study also explores the role of policy instruments such as subsidies, carbon credits, and extended producer responsibility (EPR) schemes in enhancing recycling viability. Additionally, it identifies key technical and socio-environmental challenges and provides future research directions to guide advancements in sustainable LIB recycling. The findings emphasize the need for policy-driven support to scale direct recycling and close research gaps, offering actionable insights for developing a low-carbon, circular battery economy.},
+	urldate = {2025-12-03},
+	journal = {Separation and Purification Technology},
+	author = {Das, Pronob and Hewage, Kasun and Kotagodahetti, Ravihari and Wanniarachchi, Sandun and Sadiq, Rehan},
+	month = feb,
+	year = {2026},
+	keywords = {Future research, Lithium-ion battery recycling, Recycling vs disposal, Social aspects, Techno-economic analysis},
+	pages = {135847},
+	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/F2CYGI2P/Das et al. - 2026 - Lithium-ion battery recycling a critical review of techno-economical and socio-environmental impact.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/WP7WTAT9/S1383586625044442.html:text/html},
+}
+
+@article{wang_overview_2017,
+	title = {An overview of recycling and treatment of spent {LiFePO4} batteries in {China}},
+	volume = {127},
+	issn = {0921-3449},
+	url = {https://www.sciencedirect.com/science/article/pii/S0921344917302677},
+	doi = {10.1016/j.resconrec.2017.08.019},
+	abstract = {The number of spent LiFePO4 batteries has increased with the rapid development of the electric vehicle industry in China. Recycling of spent LiFePO4 batteries is important not only for the treatment of waste but also for the recovery of useful resources. However, the treatment of spent LiFePO4 batteries is challenging because LiFePO4 batteries do not contain any precious metals, treatment is complex using traditional recycling process, and the number of spent batteries recovered from the public has been very small recently. Therefore, it is necessary to summarize the existing problems and propose a proper recycling route for spent LiFePO4 batteries. In this paper, the current status of spent LiFePO4 batteries recycling in China is introduced, and the environmental benefits of recycling are analyzed. The state of the art in preprocessing of End-of-Life LiFePO4 batteries and the final batteries recovery is discussed in detail. Based on the review, optimizing the recycling mode, increasing the precious metals recovery efficiency, and decreasing the chemical reagents consumption by effective materials liberation and separation are proposed as potential improvement strategies to make the recycling chain more environmentally friendly.},
+	urldate = {2025-12-03},
+	journal = {Resources, Conservation and Recycling},
+	author = {Wang, Wei and Wu, Yufeng},
+	month = dec,
+	year = {2017},
+	keywords = {Environmental benefits, Recycling, Recycling process, Spent LiFePO batteries},
+	pages = {233--243},
+	file = {ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/7FLZFXUY/S0921344917302677.html:text/html},
+}
+
+@misc{noauthor_energy_nodate-1,
+	title = {Energy consumption in the {UK} 2024},
+	url = {https://www.gov.uk/government/statistics/energy-consumption-in-the-uk-2024},
+	abstract = {Information for overall energy consumption in the UK with details of the industry, transport, domestic and services sectors.},
+	language = {en},
+	urldate = {2025-12-03},
+	journal = {GOV.UK},
+	file = {Snapshot:/Users/georgekirby/Zotero/storage/YGHZJAV5/energy-consumption-in-the-uk-2024.html:text/html},
+}
+
+@misc{noauthor_trends_nodate-2,
+	title = {Trends in electric car markets – {Global} {EV} {Outlook} 2025 – {Analysis}},
+	url = {https://www.iea.org/reports/global-ev-outlook-2025/trends-in-electric-car-markets-2},
+	abstract = {Global EV Outlook 2025 - Analysis and key findings. A report by the International Energy Agency.},
+	language = {en-GB},
+	urldate = {2025-12-03},
+	journal = {IEA},
+	file = {Snapshot:/Users/georgekirby/Zotero/storage/EIRA5AF2/trends-in-electric-car-markets-2.html:text/html},
+}
+
+@article{birkl_degradation_2017,
+	title = {Degradation diagnostics for lithium ion cells},
+	volume = {341},
+	issn = {0378-7753},
+	url = {https://www.sciencedirect.com/science/article/pii/S0378775316316998},
+	doi = {10.1016/j.jpowsour.2016.12.011},
+	abstract = {Degradation in lithium ion (Li-ion) battery cells is the result of a complex interplay of a host of different physical and chemical mechanisms. The measurable, physical effects of these degradation mechanisms on the cell can be summarised in terms of three degradation modes, namely loss of lithium inventory, loss of active positive electrode material and loss of active negative electrode material. The different degradation modes are assumed to have unique and measurable effects on the open circuit voltage (OCV) of Li-ion cells and electrodes. The presumptive nature and extent of these effects has so far been based on logical arguments rather than experimental proof. This work presents, for the first time, experimental evidence supporting the widely reported degradation modes by means of tests conducted on coin cells, engineered to include different, known amounts of lithium inventory and active electrode material. Moreover, the general theory behind the effects of degradation modes on the OCV of cells and electrodes is refined and a diagnostic algorithm is devised, which allows the identification and quantification of the nature and extent of each degradation mode in Li-ion cells at any point in their service lives, by fitting the cells' OCV.},
+	urldate = {2025-12-03},
+	journal = {Journal of Power Sources},
+	author = {Birkl, Christoph R. and Roberts, Matthew R. and McTurk, Euan and Bruce, Peter G. and Howey, David A.},
+	month = feb,
+	year = {2017},
+	keywords = {Battery management system, Degradation, Diagnostic, Lithium ion, Open circuit voltage, State of health},
+	pages = {373--386},
+	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/VXWUDHV6/Birkl et al. - 2017 - Degradation diagnostics for lithium ion cells.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/J5R999XD/S0378775316316998.html:text/html},
 }
