--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -34,35 +34,28 @@
 
 \section{Introduction}
 
-The global consuption of energy is rising by $4.5\times10^{16}$ Joules every year; 77\% of which is from
-utilising non-renewable sources. With the affects of non-renwables on the environment still not fully realised, coupled with the concern of their finitie-life nature, poses a constant need to increase usage of renewable sources.
-However, a large set of renwable generation methods fall under the category of veriable renewable energy (VRE) sources \cite{guo_effects_2024}, thus requring a robust form of energy storage to solve the itermitten availability - as battery techonolgy increases, the use of battery as a storage medium for the energy sector are ever more increasing.  
-There is also the rapid increase in elecrict vehicle production, with a push to increase the adoption of EV's, 17.3 million cars were produced in 2024 \cite{li_evolution_2024} alone with a recent 20\% average year-on
-increase. Lithium Ion batterys (LIB's) are the most common currently used batterys due to their desirbale characyeristics in energy density, aging properties, cost and more.
+The global consumption of energy is rising by $4.5\times10^{16}$ Joules every year; 77\% of which is from non-renewable sources \cite{noauthor_renewable_nodate}. With the effects of non-renewables on the environment still not fully realised, coupled with concerns over their finite nature, there is a constant need to increase the usage of renewable sources. However, a large set of renewable generation methods fall under the category of variable renewable energy (VRE) sources \cite{guo_effects_2024}, thus requiring a robust form of energy storage to solve their intermittent availability. As battery technology improves, the use of batteries as a storage medium for the energy sector is becoming increasingly prominent. There is also a rapid increase in electric vehicle production, with a push to increase the adoption of EVs. In 2024, 17.3 million EVs were produced \cite{li_evolution_2024}, alongside a recent average year-on-year increase of 20\%. Lithium-ion batteries (LIBs) are currently the most widely used batteries due to their desirable characteristics in energy density, ageing behaviour, cost, and more.
 
-EV's and the energy sector account now account for 90\% of the total lithium ion battery demand since 2016, the total lithium-ion battery demand is 10-times larger \cite{noauthor_executive_nodate} since 2016. Different resources predict different forcasts of total battery growth \cite{chinnam_fast-charging_2021,lucu_data-driven_2020}, regardless, it appears the rate of demand wil not be decreasing in the future. 
+EVs and the energy sector now account for 90\% of total lithium-ion battery demand, and the total lithium-ion battery demand has increased ten-fold since 2016 \cite{noauthor_executive_nodate}. Different sources predict different forecasts for battery growth \cite{chinnam_fast-charging_2021,lucu_data-driven_2020}; regardless, the rate of demand does not appear to be decreasing in the near future.
 
-LIB's, decrease in performance and capacity \cite{palacin_why_2016} until they are deemed unsuitable for their current use. Eventually, all current batterys in use today will need to be disposed of, in 2021 436,000 tons of lithium was mined for batteries alone , a strong case for slowing down the need for mining new materials is made, whilst keeping up with the demand \cite{noauthor_battery_2023}. It's noted that battery chemistry is still a developing feild, thus newer batteries may use less scarce materials, thus hard to
-truly predict the sustaniability of mining these materials, for example, some reports (cite faraday) say cobalt supplies could be used entirley by 2040. Solutions do exits, recycling methods are been developed in order to extract the materials, termed battery metal recycling (BMR), however there are wildly different sources suggesting how much of current batterys actually are recyled (one showing 5\%), (other showing 90\%), and the techonolgy to do so is still a devloping feild, there are many different methods (cite issurs), since most of the rare earth
-elements are within the batterys cathode, methods such as hydrometallurgical process can extract these, but at the cost of severe reduction in lithum yeild \cite{hasan_advancing_2025} - although there are promising methods with some proposing a lithium recovery needing less than 40\% the energy compared to mining the virgin material 
-\cite{yoo_life-cycle_2023} whilst still recovering nickle and cobalt. There is also the rising interest in reusing the batterys before recyling, these batterys are ferrerd to as second-life batteries (SLB's); in the EV use-case, the majority of the batteries are deemed finished once their usable capacity drops below 80\% (cite),
-but often, due to the other parameters of the batteries needing to be of high standards for EV use, the 'dead' batteries can still provide a very usefull serivce in less demanding applications, a common one being energy storage systems (ESS) \cite{mattia_lithium-ion_2025}, with claims resuing can reduce CO2 emmisions by
-56\% as apposed to using natural fuel gas. However there are again challanges associated, for saftey there is the need for robust testing, asorting the batteries based on their current health states, non automised methods of extracting cells from their original pack. These additional steps mean the price of SLB's could become at a point where they are not much cheaper than new batteries, making the solution less attractive to many sectors \cite{mattia_lithium-ion_2025}.
+LIBs decrease in performance and capacity over time \cite{palacin_why_2016}, until they are deemed unsuitable for their current use. Eventually, all batteries in use today will require disposal. In 2021, 436,000 tonnes of lithium were mined for batteries alone \cite{noauthor_battery_2023}, further highlighting the need to reduce reliance on mining while meeting demand. Battery chemistry is still a developing field, and newer batteries may use fewer scarce materials, making long-term sustainability difficult to predict. For example, some reports suggest cobalt reserves may be exhausted by 2040 \cite{gifford_lithium_nodate}. Recycling methods are being developed to recover battery materials, termed battery metal recycling (BMR) - however, sources vary widely, with estimates of current recycling rates ranging from as low as 5\%. Recycling technology is still developing, and many different process routes exist \cite{das_lithium-ion_2026}. Since most valuable metals are located in the cathode, hydrometallurgical processes can recover them, although often with reduced lithium yield \cite{hasan_advancing_2025}. Promising work has shown lithium recovery requiring less than 40\% of the energy needed to mine virgin material \cite{yoo_life-cycle_2023}, while still recovering nickel and cobalt.
 
-In summary, there are methods that are devloping to reduce the need for mining new materials and decreasing recyling emrgy, but ultimately, providing methods to increase the usable life of the current batteries serves as a direct way reduce the impacts of batteries themselves and to meet their growing demand.
-If just 1 extra life cycle could be added to all EV's currently on the road (~60 million (citr)), this could power all of the UK's energy needs for one day (cite govengy); as most batterys cycle life are well over 1000, any incament in cycle life can be greatly beneficial.
+There is also increasing interest in reusing batteries before recycling. These are referred to as second-life batteries (SLBs). In EV applications, batteries are typically retired when their usable capacity falls below 80\% \cite{wang_overview_2017}, yet they can still perform effectively in less demanding applications such as energy storage systems (ESS) \cite{mattia_lithium-ion_2025}. Re-use has been reported to reduce $CO_{2}$ emissions by up to 56\% compared with natural gas systems. However, challenges exist, including safety validation, cell sorting based on health, and the lack of automated pack disassembly methods. These additional steps may lead to SLBs being insufficiently cheaper than new batteries, limiting commercial appeal \cite{mattia_lithium-ion_2025}.
 
-Moddeling and prediciting how batteries degreade over time is pivitol for the growing use of lithium batteries as it allows informed descisions on how to best charge and use battereis to prolong life, as well allow optimisations on the charging throughout the batteries life.
+In summary, several methods are developing to reduce reliance on newly mined materials and lower recycling energy requirements, but extending the usable lifetime of existing batteries remains a direct and impactful way to reduce environmental burden while meeting rising demand. If just one additional life cycle could be added to all EVs currently on the road (~60 million \cite{noauthor_trends_nodate-2}), the stored energy would be enough to power the UK for one day \cite{noauthor_energy_nodate-1}. With most batteries capable of over 1000 cycles, any increase in cycle life can lead to significant benefit.
+
+Modelling and predicting lithium-ion battery degradation is therefore pivotal, as it enables informed decisions on how best to charge and operate batteries to prolong life, as well as optimise usage across their lifetime.
 
 \subsection{Project Aims}
 This project aims first to characterise Lithium battereies behaviour by perameterisation, without ex-situe tests. This data will then be used in combination with work previously done to form the charging protocol based off minimising different objectve functions. Data from this will be used to form the basis of a machine learning model in the hopes this model can, over time, allow for a much simpler method of predicting a batteries future behaviour. If this model can show how different charging currents can affect degredation, a charging protocol which is derivived from minimsing such model will found and be tried in the labs to compare. If this is not achived, atleast this project can validate existing predicted charging to minimise degredaditon will be tested, and the parameterisation of the batteries during degredaditon will be researched by using optimisation tools.
 
-Figure x highlits the original idealised goal, to have a purley data driven model that can predict the output voltage over any cycle, thus been able to derrive an idealised charging current to maxamise the lifespan.
+Figure \ref{fig:bb} highlits the original idealised goal, to have a purley data driven model that can predict the output voltage over any cycle, thus been able to derrive an idealised charging current to maxamise the lifespan.
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.5\textwidth]{../Images/nn_battery.png}
     \caption{Inital end objective: Black Box Battery modeling degredaditon}
+    \label{fig:bb}
 \end{figure}
 
 \subsubsection{Objectives}
@@ -92,11 +85,18 @@ All lithium-ion batteries follow the same basic principle of operation. They con
 
 The electrolyte is a medium that allows lithium ions to travel between the electrodes; however, it does not allow electrons to flow, which instead travel via the external circuit. The separator acts as a structural barrier to prevent the opposite electrodes from touching, allowing only ions to pass and thus preventing uncontrolled reactions that could cause major fire risks. During the discharging process, an external electrical path is provided between the collectors. The lithium stored within the negative electrode deintercalates, releasing lithium ions into the electrolyte, while the electrons leave the negative electrode, traveling across the external circuit to the positive electrode, where the lithium ions recombine with electrons and intercalate into the positive electrode structure. During charging, the applied voltage at the terminals is above the difference of the equilibrium electrode potentials. This applied overpotential drives lithium ions to deintercalate from the positive electrode, travel across the electrolyte, and intercalate into the negative electrode, where they combine with electrons. The speed at which the ions flow is much slower than the electron transfer, which contributes to the characteristic behavior of lithium batteries \cite{noauthor_battery_nodate}.
 
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.4\textwidth]{../Images/LIStruct.png}
+    \caption{Visial structure of Lithium Battery \cite{hasan_advancing_2025}}
+    \label{fig:lipd}
+\end{figure}
+
 \subsection{Lithium based battery degredation modes}
 
 J'O. Kane et al. \cite{jokane_lithium-ion_2022} summerises the key 3 modes of degredation caused within lithium ion batteries described below. Calendar aging is neglected in this discussion. 
 
-\textbf{Lithium plating} - Under certain charging conditions, the lithium ions within the electrolyte will join with the electrons outside the negative electrode, producing pure lithium metal - which can grow formind dentrites, depicted in figure xx. The most understood causes which acclerate this is when the negative electrode potential falls below that of lithiums own electrode potential potnetial \cite{yang_minimum_2021,lain_understanding_2021}, becoming the most thermodynamically viable reaction. From electrochemical models, the potential at the elctrodes is the sum of their open circuit potentials and overpotential. The overpotential is largley due to the kenetic overpotential at the interface of the electrodes, the Butler-Volmer equation shows as the current density $j$ increases, overpotential $\eta$. 
+\textbf{Lithium plating} - Under certain charging conditions, the lithium ions within the electrolyte will join with the electrons outside the negative electrode, producing pure lithium metal - which can grow formind dentrites, depicted in figure xx. The most understood causes which acclerate this is when the negative electrode potential falls below that of lithiums own electrode potential potnetial \cite{yang_minimum_2021,lain_understanding_2021}, becoming the most thermodynamically viable reaction. From electrochemical models, the potential at the elctrodes is the sum of their open circuit potentials and overpotential. The overpotential is largley due to the kenetic overpotential at the interface between the electroylte and electrode \cite{liu_insight_2021}, the Butler-Volmer equation shows as the current density $j$ increases, overpotential $\eta$, (figure \ref{fig:OP} shows the potentials changing duirg charge).Low temperatures and high SoC also increases Lithium plating, since it becomes harder for the lithium to incercalte within the carbon.
 $$
 j = a_s i_0 \left[ 
     \exp\!\left( \frac{\alpha_a F}{R T}\,\eta \right)
@@ -105,23 +105,31 @@ j = a_s i_0 \left[
 \right]
 $$
 
-Low temperatures and high SoC also increases Lithium plating, since it becomes harder for the lithium to incercalte within the carbon, the current affects are shown in figure xx in sections below.
+
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.3\textwidth]{../Images/Lithium_Plating.png}
     \caption{Lithium deposits shown in lighter grey on the graphite electrode \cite{attia_closed-loop_2020}}
+    \label{fig:lip}
 \end{figure}
 
-\textbf{SEI Layer growth} - A layer known as solid electyroytle interphase is formed as soon as the electrolyte soulution comes into contact with the negative electrode causing salts like \ch{Li_{2}CO_{3}} to produce acids, followerd by futher reactions; this barrier acts to preven electrons further reducing and using up the more of the electrolyte, whilst allowing passage of the lithium ions to intercolate\cite{bouguern_critical_2024}. If this SEI breaks appart, new SEI will form, taking more lithium up causing a reduction of lithum avaolable for charging. Having the battery at very high and very low SoC can cause the SEI layer to thicken also \cite{agubra_analysis_2014}. Sei formation takes up electrons within its reaction, thus reducing battery capacity.
+\textbf{SEI Layer growth} - A layer known as solid electyroytle interphase is formed as soon as the electrolyte soulution comes into contact with the negative electrode causing salts like \ch{Li_{2}CO_{3}} to produce acids, followerd by futher reactions; this barrier acts to preven electrons further reducing and using up the more of the electrolyte, whilst allowing passage of the lithium ions to intercolate\cite{bouguern_critical_2024}. If this SEI breaks appart, new SEI will form, taking more lithium up, loosing material for charging (LLI). Having the battery at high and low SoC can cause the SEI layer to thicken also \cite{agubra_analysis_2014}. SEI formation also takes up electrons within its reaction, thus reducing battery capacity.
 
 \textbf{Particle fracture} - The physical volume of the elctrodes can change during the interoclation and deintercalation, this is a degredation feature that cant be avoided in order to charge and discharge a battery, some electrodes exhibit more contraction than others, silicone is significantly greater than graphite\cite{noauthor_battery_nodate}. Concentraction gragrients, caused by high currents, within the elctrode can also cause internal stress. This can overtime cause the electrodes to break down, either resulting in more SEI grown, reducing more lithium; inability for areas of lithium intercalation, reducing charge capacity; and seperation from the binder causing either increased ohmic resistance or loss in capacity
 
-In summary, high charging currents, extreme temperatures and extreme states of charge can accelerate degredaditon, thus to reduce this, charging and discharging at infetesimally small rates and at omptimal temperatures is best, however this neglects considdereations such as charge times, thus a balance between these constraints should always be taken into account and the charging stratagies used in this project attempts to do so. The impact on degredadtion can change between charging and discharging Mention diffusion differences between charge and discharge shown bte J. Lain \textit{et al} \cite{lain_understanding_2021}.
+In summary, high charging currents, extreme temperatures and extreme states of charge can accelerate degredaditon, thus to reduce this, charging and discharging at infetesimally small rates and at omptimal temperatures is best, however this neglects considdereations such as charge times, thus a balance between these constraints should always be taken into account and the charging stratagies used in this project attempts to do so. The impact on degredadtion can change between charging and discharging Mention diffusion differences between charge and discharge shown by J. Lain \textit{et al} \cite{lain_understanding_2021}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.7\textwidth]{../Images/degred.jpg}
+    \caption{Visial impact of common degredadition mechanisms \cite{birkl_degradation_2017}}
+    \label{fig:deg}
+\end{figure}
 
 \subsection{Equivalent Circuit Model}
 
-There are many ways a lithium battery can be modeled, depending on the accuracy requried, parameters avaoialable and computational power avaoialable. The two main categories are the equivalent circuit models and physics-based models \cite{noauthor_battery_nodate}. The physics-based models integrate conservation laws aswell as dynamical behaviour which leads to a set of PDE's with both scalar and gradient based boundary conditions. These require discritisation within the physical dimentions of the model to yeild a set of ODE's which can be solved for, PyBaMM is a popular framework for such modeling and its process is shwon in figure xx. Popular physics based models in order of computational complexity \cite{noauthor_choosing_nodate} are the Doyle-Fuller-Newman model \cite{noauthor_doyle_2025}, Single-Particle Model with electolyte (SPMe) and SPM. The key problems of PBM is some require over 30 parameters to fully describe the properties and errors of such can accumulate over time, and depending on accuracy needed, the discitisation can yeild hundred of ODEs (cite battery desgin). 
+There are many ways a lithium battery can be modeled, depending on the accuracy requried, parameters avaoialable and computational power avaoialable. The two main categories are the equivalent circuit models and physics-based models \cite{noauthor_battery_nodate}. The physics-based models integrate conservation laws aswell as dynamical behaviour which leads to a set of PDE's with both scalar and gradient based boundary conditions. These require discritisation within the physical dimentions of the model to yeild a set of ODE's which can be solved for, PyBaMM is a popular framework for such modeling and its process is shwon in figure \ref{fig:pyb}. Popular physics based models in order of computational complexity \cite{noauthor_choosing_nodate} are the Doyle-Fuller-Newman model \cite{noauthor_doyle_2025}, Single-Particle Model with electolyte (SPMe) and SPM. The key problems of PBM is some require over 30 parameters to fully describe the properties and errors of such can accumulate over time, and depending on accuracy needed, the discitisation can yeild hundred of ODEs (cite battery desgin). 
 
 \begin{figure}%
     \centering
@@ -129,10 +137,10 @@ There are many ways a lithium battery can be modeled, depending on the accuracy 
     \qquad
     \subfloat[\centering DNF Parameters]{\includegraphics[width=0.6\textwidth]{../Images/dfn_param.png}}%
     \caption{Parameters and solution steps for physics based modeling}%
-    \label{fig:example}%
+    \label{fig:pyb}%
     \end{figure}
 
-Equivalent circuit models use standard lumped electrical elements to match the behaviour to that of a real lithium battery dynamics, it is this type of model most common in BMS systems today. T.Kalogiannis \textit{et al} \cite{kalogiannis_comparative_2019} provides common methods for obtaining the parameter values used in ECM's. The most common version is shown in figure xx, which is static in its dynamics. The key component is the $V_{oc}$ ideal voltage source, this value becomes a function, (when negleting temperature, degredaditon, charging-discharging hysterisis) of the batteries state of charge SoC, given by
+Equivalent circuit models use standard lumped electrical elements to match the behaviour to that of a real lithium battery dynamics, it is this type of model most common in BMS systems today. T.Kalogiannis \textit{et al} \cite{kalogiannis_comparative_2019} provides common methods for obtaining the parameter values used in ECM's. The most common version is shown in figure \ref{fig:ECM}, which is static in its dynamics. The key component is the $V_{oc}$ ideal voltage source, this value becomes a function, (when negleting temperature, degredaditon, charging-discharging hysterisis) of the batteries state of charge SoC, given by
 $$ SoC(t) = z(t)/Q = (z(t_{0}) + \int_{t_{0}}^{t} \eta(\tau) i(\tau) \,d\tau)/Q $$ 
 where $Q$ is the batteries nominal maximum capcity and $z$ is the current charge capacity. The $R_{0}$ and $R_{1}C_{1}$ branch are used to model the diffence in terminal voltage compared to that of the $V_{ocv}$ for a given instantanious SoC, and $\eta$ here is the colombic efficency, usually 0.99 for lithium batteries, since some current will be used in irreverisible chemical reactions within the cell\cite{noauthor_battery_nodate}. 
 
@@ -205,7 +213,7 @@ W. Appia \textit{et al} \cite{appiah_unravelling_2024} provides the equation for
 \right]
 \end{equation}
 
-Whilst the voltage dynamics of lithium batteries do depend on temperature, this project keeps the ambient temperature to 30, thus realtime affects on the electrical dynamics are minimal. However moddeling of the temperature is vital since temperature does directly affect degredadion. L. Mattia \textit{et al.} \cite{mattia_lithium-ion_2025} explains the various thermal modelling aproaches and shows which contributions are key in heat production, with the main equation given below. Reverisible heat generation can not be directly infered by the basic ECM model shown in figure \ref{fig:ECM}. J. Xu \textit{et al.} , equated it being proportional to $\partial U / \partial T$ where $U$ is the OCV and $T$ is the temperature, this value does change over the SoC of the battery and paper et all calculates the curve for a battery of similar to the one used in this project, shown in figure \ref{fig:dudt}
+Whilst the voltage dynamics of lithium batteries do depend on temperature, this project keeps the ambient temperature to 30, thus realtime affects on the electrical dynamics are minimal. However moddeling of the temperature is vital since temperature does directly affect degredadion. L. Mattia \textit{et al.} \cite{mattia_lithium-ion_2025} explains the various thermal modelling aproaches and shows which contributions are key in heat production, with the main equation given below. Reverisible heat generation can not be directly infered by the basic ECM model shown in figure \ref{fig:ECM}. J. Xu \textit{et al.}, equated it being proportional to $\partial U / \partial T$ where $U$ is the OCV and $T$ is the temperature, this value does change over the SoC of the battery and paper et all calculates the curve for a battery of similar to the one used in this project, shown in figure \ref{fig:dudt}
 
 \begin{equation}
     mCp\frac{d T}{dt} = \underbrace{I^{2}R_{0} + IV_{1}}_{irreversable} - \underbrace{IT\frac{\partial U}{\partial T}}_{reversable} - \underbrace{hAT}_{dissipation}
@@ -213,16 +221,16 @@ Whilst the voltage dynamics of lithium batteries do depend on temperature, this 
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.6\textwidth]{../Images/og_dudt.png}
+    \includegraphics[width=0.5\textwidth]{../Images/og_dudt.png}
     \caption{Charging segment extracted from the UoS dataset}
     \label{fig:dudt}
 \end{figure}
 
-A. Farman \textit{et al} \cite{farmann_study_2017}, shows that the OCV of lithium batteries can change throughout degredaditon, Lithium phosphate batteries showed a 20mV difference in regions of the SoC after aging of 500 cycles at 1C of charge and discharge. Additionally, while there exits methods of extracting an accurate OCV curve, it can take hours to accuratley obtain to minimise overpotentials \cite{kalogiannis_comparative_2019}. This is where numerical methods could be utilised to obtain the OCV curve and the other ECM parameters by fitting against a grey-box model of the dynamics, ICLOCS2 \cite{noauthor_iclocs2_nodate}, will be used heavily throughout this project to see it's ability to parameterise the battery dynamics. A.A. Mohamed \textit{et al.} \cite{mohamed_advancements_2025} cite shows the many methods to obtain ECM parameters with methods ranging from analyitcal approaches based on various current inputs, to meta-heuristic optimization algorithms.  
+A. Farman \textit{et al.}\cite{farmann_study_2017}, shows that the OCV of lithium batteries can change throughout degredaditon, Lithium phosphate batteries showed a 20mV difference in regions of the SoC after aging of 500 cycles at 1C of charge and discharge. Additionally, while there exits methods of extracting an accurate OCV curve, it can take hours to accuratley obtain to minimise overpotentials \cite{kalogiannis_comparative_2019}. This is where numerical methods could be utilised to obtain the OCV curve and the other ECM parameters by fitting against a grey-box model of the dynamics, ICLOCS2 \cite{noauthor_iclocs2_nodate}, will be used heavily throughout this project to see it's ability to parameterise the battery dynamics. A.A. Mohamed \textit{et al.} \cite{mohamed_advancements_2025} cite shows the many methods to obtain ECM parameters with methods ranging from analyitcal approaches based on various current inputs, to meta-heuristic optimization algorithms.  
 
 \subsection{Charging methods}
 
-There exists many techniques to charge batteries with a graphical summary of the common methods shwon in figure \ref{fig:Chargings}. Q. Lin \textit{et al.} \cite{chen_overpotential_2021-1} highliths the different methods described below. The most common method is known as CC-CV charge. This is where the bulk charge is done such that the applied overportnetial to the battery causes a constant current to flow, the voltage potential of the battery rises to a defined maximum point, the charging device then switches to a contant voltage charging mode, this fixed voltage is held until the charge current decays to a negligable or fixed amount - current still flows during this stage as there is still an overpotnetial between the batteries equlibrium state and the applied constant voltage. This is the simplest to implament without the need for an accurate SoC reading to risk overcharging (like would be with pure CC charging). 
+There exists many techniques to charge batteries with a graphical summary of the common methods shwon in figure \ref{fig:Chargings}. Q. Lin \textit{et al.} \cite{chen_overpotential_2021} highliths the different methods described below. The most common method is known as CC-CV charge. This is where the bulk charge is done such that the applied overportnetial to the battery causes a constant current to flow, the voltage potential of the battery rises to a defined maximum point, the charging device then switches to a contant voltage charging mode, this fixed voltage is held until the charge current decays to a negligable or fixed amount - current still flows during this stage as there is still an overpotnetial between the batteries equlibrium state and the applied constant voltage. This is the simplest to implament without the need for an accurate SoC reading to risk overcharging (like would be with pure CC charging). 
 
 \begin{figure}[ht]
     \centering
@@ -238,7 +246,7 @@ Multistage CC is a popular method in reseach as it allows for the customisation 
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.5\textwidth]{../Images/Observer_op.png}
+    \includegraphics[width=0.6\textwidth]{../Images/Observer_op.png}
     \caption{Estimated potentials in response to charge current}
     \label{fig:OP}
 \end{figure}
@@ -260,7 +268,7 @@ Papers focusing on the physics based moedeling usually focus on a subset of degr
 
 Kuzhiyil \textit{et al.} \cite{kuzhiyil_lithium-ion_2025} by representing the electrochamiecal dynamics as $\frac{d\mathbf{x}}{dt} = f(\mathbf{x, z ,u}, t; \mathbf{\alpha})$ and couplining to degradation dynamics $\frac{d\mathbf{z}}{dt} = f(\mathbf{z, x ,u}, t; \mathbf{\theta})$ where $\mathbf{x} \in \mathbb{R}^{n_1}$ and $\mathbf{z} \in \mathbb{R}^{m_1}$ (once discritised), representing the battery electrochemical and degredadtion state variables respecitlvey by seperation of the speed of dynamics, 
 
-Severson \textit{et al} \cite{severson_data-driven_2019}, provides one of the largest availaible dataset for battery charging. This paper takes uses a pruley data driven apprach in modeling, but uses enginererd features such as the change in discharge voltage curves between cycle 0 and cycle 100. Using a linear regression model, they predict the cycle to failure (defined when the capacity drops to 80\% of original), it shows upto a 9.2\% accuracy. Attia \textit{et al.} \cite{attia_closed-loop_2020} takes the work of Severson \textit{et al.} to great use, using the model to predic how well differenct charge cycles last by cycling the batteries under random multistage CC cycles, predicting the degredadition and using a bayesian optmisation strategy\cite{noauthor_bayesian_nodate} to find the next appropriate charging protocol - in a closed loop feedback shown in figure \ref{fig:OptimB}
+Severson \textit{et al} \cite{severson_data-driven_2019}, provides one of the largest availaible dataset for battery charging. This paper takes uses a pruley data driven apprach in modeling, but uses enginererd features such as the change in discharge voltage curves between cycle 0 and cycle 100. Using a linear regression model, they predict the cycle-to-failure (defined when the capacity drops to 80\% of original), it shows upto a 9.2\% error. Attia \textit{et al.} \cite{attia_closed-loop_2020} takes the work of Severson \textit{et al.} to great use, using the model to predic how well differenct charge cycles last by cycling the batteries under random multistage CC cycles, predicting the degredadition and using a bayesian optmisation strategy\cite{noauthor_bayesian_nodate} to find the next appropriate charging protocol - in a closed loop feedback shown in figure \ref{fig:OptimB}
 
 \begin{figure}[ht]
     \centering
